# WEB_HW_013

./: alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py  test.sqlite
alembic/versions/: 0148a0a7b7e6_add_column_confirmed.py
config/: config.py
docs/source/: conf.py  index.rst
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619
postgres-data/base/16384/: 1247  1249  1259  16387  16390  16392  16393  16398  16399  16401  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  todos.py  users.py
src/routes/: auth.py  contacts.py  data.py  todos.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
tests/: conftest.py  test_e2e_auth.py  test_unit_repository_todo.py
