[tool.poetry]
name = "hw-13"
version = "0.1.0"
description = ""
authors = ["GhosteLLoS <123022357+GhosteLLoS@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.0"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-multipart = "^0.0.6"
alembic = "^1.11.2"
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"
conf = "^0.4.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
mysql-connector-python = "^8.1.0"
passlib = "^1.7.4"
psycopg2 = "^2.9.7"
bcrypt = "^4.0.1"
pydantic = "^2.1.1"
fastapi-mail = "^1.4.1"
black = "^23.10.0"
libgravatar = "^1.0.4"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
sphinx = "^7.2.6"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.0"
aiosqlite = "^0.19.0"
anyio = "^4.0.0"
pytest-asyncio = "^0.21.1"
pytest-tornasync = "^0.6.0.post2"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."